# mneme

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  cyrius.cyml  deps-report.md  tarpaulin-report.json
.github/actions/setup-rust-env/: action.yml
.github/workflows/: ci.yml  release-automation.yml  release.yml
benches/: mneme_bench.bcyr  search_bench.rs
crates/mneme-ai/: Cargo.toml
crates/mneme-ai/src/: client.rs  clustering.rs  concepts.rs  consolidation.rs  creative.rs  error.rs  event_bus.rs  flashcards.rs  lib.rs  linker.rs  multimodal.rs  qa_bridge.rs  rag.rs  rag_eval.rs  tagger.rs  templates.rs  temporal.rs  translator.rs  writer.rs
crates/mneme-api/: Cargo.toml
crates/mneme-api/src/: advanced_handlers.rs  ai_handlers.rs  consolidation_handlers.rs  handlers.rs  io_handlers.rs  lib.rs  main.rs  router.rs  state.rs  vault_handlers.rs
crates/mneme-api/tests/: api_integration.rs
crates/mneme-core/: Cargo.toml
crates/mneme-core/src/: calendar.rs  config.rs  frontmatter.rs  graph.rs  lib.rs  link.rs  note.rs  plugin.rs  tag.rs  task.rs
crates/mneme-io/: Cargo.toml
crates/mneme-io/src/: error.rs  export_html.rs  export_pdf.rs  import_markdown.rs  import_notion.rs  import_obsidian.rs  lib.rs  web_clipper.rs
crates/mneme-mcp/: Cargo.toml
crates/mneme-mcp/src/: lib.rs  main.rs  protocol.rs  tools.rs
crates/mneme-search/: Cargo.toml
crates/mneme-search/benches/: search_bench.rs
crates/mneme-search/src/: context_buffer.rs  cross_vault.rs  embedder.rs  embedding_backend.rs  error.rs  lib.rs  query_dsl.rs  retrieval_optimizer.rs  semantic.rs  semantic_engine.rs  vector_store.rs
crates/mneme-store/: Cargo.toml
crates/mneme-store/benches/: store_bench.rs
crates/mneme-store/migrations/: 001_initial.sql  003_provenance.sql
crates/mneme-store/src/: db.rs  error.rs  files.rs  lib.rs  manager.rs  registry.rs  sharing.rs  vault.rs  versioning.rs
crates/mneme-ui/: Cargo.toml
crates/mneme-ui/src/: app.rs  lib.rs  main.rs  views.rs
deploy/: agnoshi-intents.toml  mneme-indexer.service  mneme-indexer.timer  mneme.agnos-agent  mneme.service  mneme.toml
docker/: Dockerfile  Dockerfile.dev  docker-compose.yml
docs/: benchmarks-rust-vs-cyrius.md  benchmarks.md
docs/adr/: 001-rust-tantivy-sqlite.md  002-plain-text-source-of-truth.md  003-daimon-delegation.md  004-import-export-architecture.md  005-advanced-ai-architecture.md  006-collaboration-architecture.md  007-in-process-vectors.md  008-retrieval-optimizer.md  009-multi-vault.md  010-rag-eval-metrics.md  011-note-consolidation.md  012-schema-clustering.md  013-pluggable-embedding-backends.md  014-training-feedback-export.md  README.md
docs/audit/: 2026-07-10-audit.md
docs/development/: roadmap.md  state.md
docs/development/issues/: 2026-07-13-mcp-tools-advertise-empty-inputschema.md
docs/guides/: getting-started.md  user-guide.md
docs/reference/: api.md  architecture.md
lib/: args_macos.cyr  async.cyr  async_agnos.cyr  async_win.cyr  io.cyr  net.cyr  sakshi.cyr  syscalls_aarch64_linux.cyr  syscalls_linux_common.cyr  syscalls_macos.cyr  syscalls_x86_64_agnos.cyr  syscalls_x86_64_linux.cyr  tls.cyr  tls_native_conn.cyr  tls_native_ctx.cyr  tls_native_hs13.cyr  ws.cyr
rust-old/: Cargo.toml  Makefile
rust-old/crates/mneme-ai/src/: clustering.rs  event_bus.rs  lib.rs  linker.rs  rag.rs  rag_eval.rs  summarizer.rs  tagger.rs  training_export.rs  writer.rs
rust-old/crates/mneme-api/: Cargo.toml
rust-old/crates/mneme-api/src/: advanced_handlers.rs  ai_handlers.rs  consolidation_handlers.rs  handlers.rs  io_handlers.rs  main.rs  router.rs
rust-old/crates/mneme-api/tests/: api_integration.rs
rust-old/crates/mneme-core/: Cargo.toml
rust-old/crates/mneme-core/src/: config.rs  frontmatter.rs  note.rs  plugin.rs  task.rs
rust-old/crates/mneme-io/: Cargo.toml
rust-old/crates/mneme-io/src/: export_pdf.rs  import_obsidian.rs  lib.rs  web_clipper.rs  wikilink.rs
rust-old/crates/mneme-mcp/src/: main.rs  tools.rs
rust-old/crates/mneme-search/: Cargo.toml
rust-old/crates/mneme-search/src/: context_buffer.rs  embedding_backend.rs  engine.rs  lib.rs  query_dsl.rs  semantic.rs  vector_store.rs
rust-old/crates/mneme-store/benches/: store_bench.rs
rust-old/crates/mneme-store/migrations/: 002_last_accessed.sql
rust-old/crates/mneme-store/src/: error.rs  files.rs  lib.rs  manager.rs  sharing.rs  vault.rs
rust-old/crates/mneme-ui/: Cargo.toml
scripts/: bump-version.sh  verify-agnos-sandbox.sh
src/: ai_client.cyr  ai_clustering.cyr  ai_concepts.cyr  ai_consolidation.cyr  ai_creative.cyr  ai_event_bus.cyr  ai_flashcards.cyr  ai_linker.cyr  ai_multimodal.cyr  ai_qa_bridge.cyr  ai_rag.cyr  ai_rag_eval.cyr  ai_summarizer.cyr  ai_tagger.cyr  ai_templates.cyr  ai_temporal.cyr  ai_training_export.cyr  ai_translator.cyr  ai_writer.cyr  api_server.cyr  core_calendar.cyr  core_config.cyr  core_frontmatter.cyr  core_graph.cyr  core_link.cyr  core_note.cyr  core_plugin.cyr  core_tag.cyr  core_task.cyr  core_uuid.cyr  io_export_html.cyr  io_export_pdf.cyr  io_markdown.cyr  io_notion.cyr  io_obsidian.cyr  io_web_clipper.cyr  io_wikilink.cyr  main.cyr  mcp_protocol.cyr  mcp_server.cyr  (+23 more)
tests/: ai_client.tcyr  ai_clustering.tcyr  ai_concepts.tcyr  ai_consolidation.tcyr  ai_creative.tcyr  ai_event_bus.tcyr  ai_flashcards.tcyr  ai_linker.tcyr  ai_multimodal.tcyr  ai_qa_bridge.tcyr  ai_rag.tcyr  ai_rag_eval.tcyr  ai_summarizer.tcyr  ai_tagger.tcyr  ai_templates.tcyr  ai_temporal.tcyr  ai_training_export.tcyr  ai_translator.tcyr  ai_writer.tcyr  api_server.tcyr  core_calendar.tcyr  core_config.tcyr  core_frontmatter.tcyr  core_graph.tcyr  core_link.tcyr  core_note.tcyr  core_plugin.tcyr  core_tag.tcyr  core_task.tcyr  io_export_html.tcyr  io_export_pdf.tcyr  io_markdown.tcyr  io_notion.tcyr  io_obsidian.tcyr  io_web_clipper.tcyr  io_wikilink.tcyr  mcp_protocol.tcyr  mcp_server.tcyr  mcp_tools.tcyr  mneme.bcyr  (+24 more)
