[workspace]
members = [
    "crates/mneme-core",
    "crates/mneme-store",
    "crates/mneme-search",
    "crates/mneme-ai",
    "crates/mneme-api",
    "crates/mneme-ui",
    "crates/mneme-mcp",
    "crates/mneme-io",
]
resolver = "2"

[workspace.package]
version = "2026.3.13"
edition = "2024"
authors = ["Robert MacCracken <robert@anomaly.co>"]
license = "AGPL-3.0"
repository = "https://github.com/agnostos/mneme"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP / API
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json"] }

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "chrono"] }

# Search / Embeddings
tantivy = "0.22"

# Markdown / Text
pulldown-cmark = "0.12"
comrak = "0.36"

# Utilities
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
sha2 = "0.10"
hex = "0.4"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Internal crates
mneme-core = { path = "crates/mneme-core" }
mneme-store = { path = "crates/mneme-store" }
mneme-search = { path = "crates/mneme-search" }
mneme-ai = { path = "crates/mneme-ai" }
mneme-api = { path = "crates/mneme-api" }
mneme-ui = { path = "crates/mneme-ui" }
mneme-mcp = { path = "crates/mneme-mcp" }
mneme-io = { path = "crates/mneme-io" }

# File watching
notify = "7"

# Regex
regex = "1"

# Globbing
glob = "0.3"

[package]
name = "mneme-workspace"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
mneme-search = { workspace = true }
uuid = { workspace = true }

[[bench]]
name = "search_bench"
harness = false

