[package]
name = "mneme-ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AI pipelines: summarization, auto-linking, concept extraction, RAG"

[dependencies]
mneme-core = { workspace = true }
mneme-search = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
