[package]
name = "mneme-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "HTTP API server for Mneme"

[dependencies]
mneme-core = { workspace = true }
mneme-store = { workspace = true }
mneme-search = { workspace = true }
mneme-ai = { workspace = true }
mneme-io = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
dirs = "6"
tempfile = "3"

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
