[package]
name = "mneme-search"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Full-text search (Tantivy) and semantic/vector search integration"

[dependencies]
mneme-core = { workspace = true }
mneme-store = { workspace = true }
tokio = { workspace = true }
tantivy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "search_bench"
harness = false
