[package]
name = "mneme-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "GUI: editor, graph visualization, search, backlinks panel"

[dependencies]
mneme-core = { workspace = true }
mneme-store = { workspace = true }
mneme-search = { workspace = true }
mneme-ai = { workspace = true }
mneme-api = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
