[package]
name = "mneme-io"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Import/export: Obsidian, plain Markdown directories, HTML export"

[dependencies]
mneme-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
comrak = { workspace = true }
printpdf = { workspace = true }

[dev-dependencies]
tempfile = "3"
