[package]
name = "mneme-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "TUI: note list, search, editor, backlinks panel, tag browser"

[dependencies]
mneme-core = { workspace = true }
mneme-store = { workspace = true }
mneme-search = { workspace = true }
mneme-ai = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
dirs = "6"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
